--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+plymouth-theme-regolith (1.0.1-1) focal; urgency=medium
+
+  * Add package hooks. 
+
+ -- Regolith Linux <regolith.linux@gmail.com>  Sun, 10 May 2020 10:19:53 -0700
+
 plymouth-theme-regolith (1.0.0-1) focal; urgency=medium
 
   * Initial release, copy from hamara. 
