Ship grub file.

--- a/debian/install
+++ b/debian/install
@@ -1,2 +1,3 @@
 *.png usr/share/plymouth/themes/regolith
 regolith.plymouth usr/share/plymouth/themes/regolith
+regolith.grub usr/share/plymouth/themes/regolith
