--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+plymouth-theme-regolith (1.0.3-1) focal; urgency=medium
+
+  * Tweaks to config files. 
+
+ -- Regolith Linux <regolith.linux@gmail.com>  Sun, 10 May 2020 20:15:16 -0700
+
 plymouth-theme-regolith (1.0.2-1) focal; urgency=medium
 
   * Ship grub file. 
