--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+plymouth-theme-regolith (1.1.3-1ubuntu1) focal; urgency=medium
+
+  [ Ken Gilmer ]
+  * Color tweaks
+
+ -- Regolith Linux <regolith.linux@gmail.com>  Sat, 01 May 2021 07:28:11 -0700
+
 plymouth-theme-regolith (1.1.2-1ubuntu1) focal; urgency=medium
 
   [ Ken Gilmer ]
