--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+plymouth-theme-regolith (1.2.0) focal; urgency=medium
+
+  [ Ken Gilmer ]
+  * Update logo. Remove unused assets
+
+ -- Regolith Linux <regolith.linux@gmail.com>  Wed, 15 Jun 2022 20:18:30 -0700
+
 plymouth-theme-regolith (1.1.3-1ubuntu1) focal; urgency=medium
 
   [ Ken Gilmer ]
