--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+plymouth-theme-regolith (1.2.1) focal; urgency=medium
+
+  [ Ken Gilmer ]
+  * Use final logo image
+
+ -- Regolith Linux <regolith.linux@gmail.com>  Fri, 17 Jun 2022 04:28:07 -0700
+
 plymouth-theme-regolith (1.2.0) focal; urgency=medium
 
   [ Ken Gilmer ]
